# CS250_project

./: .gitignore  CMakeLists.txt  Course.cpp  Course.h  CourseList.cpp  CourseList.h  CourseListBigThree.cpp  CourseListInsertInOrder.cpp  Interface.cpp  Interface.h  Main.cpp  MainForPartA.cpp  MainForPartB.cpp  TestCopyAssignmentOp.cpp  TestCopyConstructor.cpp  TestCourse.cpp  TestFunctions.cpp  TestingCases.cpp  TestingCases.h  doctest.h
Google_tests/: CMakeLists.txt  ConstructorTests.cpp
Test/: doctest.h  test.cpp
